# AMG_SchwingerModel

./: CMakeLists.txt  README.md  script.sh
include/: AMG.h  amg.h  bi_cgstab.h  boundary.h  config.h  config.h.in  dirac_operator.h  fgmres.h  gauge_conf.h  level.h  operator_overloads.h  params.h  sap.h  twoGrid.h  variables.h
src/: AMG.cpp  amg.cpp  dirac_operator.cpp  fgmres.cpp  gauge_conf.cpp  level.cpp  main.cpp  sap.cpp  tests.cpp  twoGrid.cpp  variables.cpp
